--- a/html/form.html
+++ b/html/form.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<style> 
-.h4{
-    background-color: blanchedalmond;
-    
-}
+<style>
+    .h4 {
+        background-color: blanchedalmond;
+
+    }
 </style>
 
 <body>
@@ -51,16 +51,17 @@
             <option value="pune">pune</option>
             <option value="maharastr">maharastr</option>
             <option value="chhatisgadh">chhatisgadh</option>
-        </select><br/>
+        </select><br />
         <textarea name="feedback" id="101" placeholder="please give your valuable feedback year" cols="40"
             rows="10">feedback</textarea><br />
-        
-            <button>
+
+        <button>
             <input type="submit">
         </button>
     </form>
-
+<button><a href="table.html">add more</a></button>
     <footer></footer>
+
 </body>
 
 </html>
